--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10654,3 +10654,24 @@ td:last-child {
   padding-right: 0;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar__heading {
+  font-size: 22px;
+}
+
+.nav-item {
+  padding: 0.5rem 1rem;
+}
+
+.nav-link {
+  padding: 0 0 0.25rem;
+}
+
+.nav-link.active {
+  border-bottom: 1px solid #5958f1;
+}
+
