--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,12 +7,6 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-th,
-td {
-    &:first-child {
-        padding-left: 0;
-    }
-    &:last-child {
-        padding-right: 0;
-    }
-}
+@import 'elements/tables';
+
+@import 'components/navbar';
