--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -1,10 +1,12 @@
 .navbar {
     display: flex;
     justify-content: space-between;
+    padding: 0.5rem 0;
 }
 
 .navbar__heading {
     font-size: 22px;
+    margin-bottom: 0;
 }
 
 .nav-item {
